fixed so header doesnt linebreak on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@ body {
 }
 
 #welcome-text{
-  font-size: 50px;
+  font-size: 3.2em;
   font-family: 'Neucha', cursive;
   /*font-family: 'Indie Flower', cursive;
   font-family: 'Handlee', cursive;*/
@@ -133,5 +133,8 @@ body {
 }
   #footer-contact {
     display: block;
+  }
+  #welcome-text{
+    font-size: 2em;
   }
 }
